# backend

practice_1/: pyproject.toml
practice_1/app/: .env  main.py  test.sqlite
practice_1/app/api/: __init__.py  auth.py  images.py  items.py  recipes.py  students.py
practice_1/app/config/: __init__.py  config.py
practice_1/app/models/: __init__.py  form.py  item.py  recipe.py  recipe_table.py
practice_2/: README.md  pyproject.toml
practice_2/app/: .env  main.py  test.sqlite
practice_2/app/alembic/versions/: 53e228868574_.py  6a7d0a4d9b33_.py  9cd7644e09b0_.py  a8909d354519_.py  b62a9c84b0fa_.py
practice_2/app/api/: __init__.py  allergens.py  cuisines.py  ingredients.py  recipes.py
practice_2/app/authentication/: backend.py
practice_2/app/authentication/helper/: users.py
practice_2/app/authentication/schemas/: user.py
practice_2/app/config/: config.py
practice_2/app/models/: __init__.py  allergen.py  cuisine.py  db_helper.py  ingredient.py  recipe.py  recipe_generation.py  recipe_ingredients.py  tables.py  users.py
practice_2/app/task_queue/: __init__.py  broker.py
practice_2/app/tasks/: __init__.py  recipe_generation.py
