[project]
name = "practice-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "black>=26.1.0",
    "fastapi>=0.134.0",
    "fastapi-filter>=2.0.1",
    "fastapi-pagination>=0.15.10",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "greenlet>=3.3.2",
    "openai>=2.32.0",
    "pydantic-settings>=2.13.1",
    "sqlalchemy>=2.0.47",
    "taskiq>=0.12.2",
    "taskiq-aio-pika>=0.6.0",
    "taskiq-fastapi>=0.5.0",
    "uvicorn>=0.41.0",
]
